Fixed footer positioning and spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,7 @@ html{
     position: relative;
     min-height: 100%;
     max-height: auto;
+    padding-bottom: 10rem;
 }
 // 
 // Header.js 
